@@ -19,9 +19,6 @@ $Id$
 
 ==================  3.6.0 ==================
 
-* LUCENE-3305: Added Kuromoji morphological analyzer for Japanese.
-  (Christian Moen, Masaru Hasegawa via Robert Muir)
-
 * SOLR-2919: Added parametric tailoring options to ICUCollationKeyFilterFactory.
   These can be used to customize range query/sort behavior, for example to
   support numeric collation, ignore punctuation/whitespace, ignore accents but
